kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-http-server-web
  labels:
    component: web
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    component: web
